# image-moments

./: .gitignore  Cargo.toml  README.md  crates.js  search-index.js  settings.html  source-files.js
.github/: ci.yml
.github/workflows/: ci.yml
image_moments/: all.html  index.html  sidebar-items.js  struct.Central.html  struct.Index.html  struct.NormalizedCentral.html  struct.Order.html  struct.Spatial.html  trait.Moments.html  trait.Point.html  trait.Scalar.html  trait.SupportedIndex.html  trait.SupportedOrder.html
image_moments/central/: struct.Central.html
image_moments/index/: struct.Index.html  trait.SupportedIndex.html
image_moments/moments/: trait.Moments.html
image_moments/normalized_central/: struct.NormalizedCentral.html
image_moments/order/: struct.Order.html  trait.SupportedOrder.html
image_moments/primitives/: trait.Point.html  trait.Scalar.html
image_moments/spatial/: struct.Spatial.html
implementors/core/clone/: trait.Clone.js
implementors/core/cmp/: trait.Eq.js  trait.PartialEq.js
implementors/core/convert/: trait.From.js
implementors/image_moments/: trait.Point.js
src/: accumulator.rs  central.rs  index.rs  lib.rs  moments.rs  normalized_central.rs  order.rs  primitives.rs  spatial.rs  storage.rs
src/image_moments/: central.rs.html  index.rs.html  lib.rs.html  moments.rs.html  normalized_central.rs.html  order.rs.html  primitives.rs.html  spatial.rs.html
src/implementation/: accumulator.rs  central_moments.rs  mod.rs  normalized_central_moments.rs  storage.rs
tests/: example_image.rs
(+17 files in other folders)
